# R2_Vision_Real

./: .gitignore  README.md  cropped_depth_IR Right.raw  cropped_depth_IR Right_metadata.csv  cv-test.py  onnx_inference.py  output.ply  recorder.py  test2.py
.github/: copilot-instructions.md
build_isolated/: catkin_make_isolated.cache
devel_isolated/conqu_vision/: .catkin
logs/conqu_vision/: build.check.006.log.stderr  build.check.093.log.stderr  build.check.098.log.stderr  build.check.101.log.stderr  build.check.102.log.stderr  build.cmake.009.log.stderr  build.make.030.log.stderr  build.make.031.log.stderr  build.make.036.log.stderr  build.make.042.log.stderr  build.make.052.log.stderr  build.make.053.log.stderr  build.make.098.log.stderr  build.make.099.log.stderr  build.make.100.log.stderr  build.make.103.log.stderr  build.make.105.log.stderr  build.make.115.log.stderr  build.make.116.log.stderr
logs/laser_double/: build.make.011.log.stderr
logs/lslidar_driver/: build.check.096.log.stderr  build.cmake.009.log.stderr  build.make.017.log.stderr
logs/orbbec_camera/: build.check.015.log.stderr
logs/wpr_simulation/: build.make.000.log.stderr
src/conqu_vision/: CMakeLists.txt  package.xml
src/conqu_vision/config/: test.json  (+1 more)
src/conqu_vison/: CMakeLists.txt  README.md  package.xml
src/conqu_vison/config/: conqu_vison_params.yaml
src/conqu_vison/include/conqu_vison/: coordinate_calculator.h  hoop_detector.h
src/conqu_vison/launch/: hoop_detection.launch
src/conqu_vison/msg/: HoopCoordinates.msg  HoopDetection.msg
src/conqu_vison/src/: coordinate_calculator.cpp  hoop_detector.cpp  main_node.cpp
src/dm_imu/: CMakeLists.txt  imu.xml
(+70 files in other folders)
